# sakura

./: .env.example  .gitignore  Caddyfile.example  README.md  auth_calendar.py  config.py  generate_token.py  main.py  personality.py  personality_patch.py  run_tests.sh  steam_check.py  system_manifest.json  ws_handler_secure.py
agent/: .env.example  BUILD.md  GAME_MODE_TZ.md  README.md  README_INSTALL.md  agent.py  build.bat  config.py  kettle_raw.py  kettle_scan.py  launch.py  list_devices.py  requirements.txt  sakura.py  test_browser.py  test_integration.py  test_new_features.py  ya.py
agent/core-rust/: Cargo.toml
agent/core-rust/src/: main.rs
agent/core-rust/src/audio/: mod.rs
agent/core-rust/src/commands/: mod.rs
agent/core-rust/src/ipc/: mod.rs
agent/core-rust/src/protocol/: mod.rs
agent/core-rust/src/stt/: mod.rs
agent/core-rust/src/vad/: mod.rs
memory/: briefing.json  db.py  evening_pulse.json  first_run.json  fortune_history.json  memory.py  mood_arc.json  mood_vector.json  music_history.json  notifications.json  patterns.json  rituals.json  sakura_pranks.json  time_feeling.json  user_commands.json  window_watcher.json
modules/: app_launcher.py  audio_control.py  autonomous.py  briefing.py  calculator.py  calendar_module.py  capabilities.py  capsules.py  chains.py  coding.py  command_router.py  context.py  device_commands.py  device_manager.py  discord_bot.py  disposition.py  emotional_memory.py  episodes.py  evening_pulse.py  fears.py  fortune_cookie.py  fuzzy.py  game_detector.py  game_hub.py  graph.py  guest_relations.py  habits.py  image_gen.py  integrations.py  intent_classifier.py  intimacy_mode.py  (+49 more)
sakura-agent/core/: Cargo.toml
sakura-agent/core/src/: main.rs
sakura-agent/core/src/audio/: capture.rs  mod.rs  pipeline.rs  ring_buffer.rs  vad.rs
sakura-agent/core/src/commands/: mod.rs
sakura-agent/core/src/ipc/: mod.rs
sakura-agent/core/src/lua/: api.rs  engine.rs  mod.rs
sakura-agent/core/src/nlu/: intent.rs  mod.rs  slots.rs
sakura-agent/core/src/protocol/: mod.rs
sakura-agent/core/src/stt/: mod.rs  recognizer.rs  wake_word.rs
(+48 files in other folders)
